Fix alignment issues with time and service selector dropdowns (#2993)

--- a/investigate-events/app/styles/investigate-events/components/_investigate-query-container.scss
+++ b/investigate-events/app/styles/investigate-events/components/_investigate-query-container.scss
@@ -9,6 +9,7 @@
     margin-right: rsa-whitespace(less);
     display: flex;
     flex: 0 0 auto;
+    height: 40px;
   }
 
   .execute-query-button {
